# modern_cmake

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  pipeline.sh  pipeline_in_docker.sh
addition/: CMakeLists.txt  README.md
addition/include/addition/: addition.h
addition/src/: addition.cpp
addition/tests/: CMakeLists.txt  addition_test.cpp
addition_types/: CMakeLists.txt
addition_types/include/addition_types/: types.h
aero/: CMakeLists.txt
aero/include/aero/: aero.h
aero/src/: aero.cpp
aero/tests/: CMakeLists.txt  aero_test.cpp
catch2_main/: CMakeLists.txt
cmake/: install.cmake  modern_cmakeConfig.cmake.in  package.cmake  testing.cmake  toolchain_linux_x86_64_gcc8.cmake
conan/: linux_x86_64_gcc8
customer/: CMakeLists.txt  add_test.cpp  calculator.cpp
docker/: Dockerfile
iron_dome/: CMakeLists.txt  iron_dome.cpp
